examples/3D_Image_Toolkit/klee-out-0/test000001.kquery
array model_version[4] : w32 -> w8 = symbolic
array sym_131133440[8] : w32 -> w8 = symbolic
(query [(Eq 1
             (ReadLSB w32 0 model_version))
         (Eq 0
             (ReadLSB w64 0 sym_131133440))]
        false)
